Bug 1213582. Skip display items in ProcessDisplayItems if we only need items for event regions, and this item isn't one and doesn't have descendants. r=mattwoodrow

--HG--
extra : commitid : D9SFSCHrIJ4
extra : rebase_source : c64355a56ce4a5710d9f4acfd268be1a5277bd28